--- a/main/static/css/game.css
+++ b/main/static/css/game.css
@@ -1,12 +1,10 @@
-*
-{
+* {
     padding: 0;
     margin: 0;
     overflow-x: hidden;
 }
 
-#popup
-{
+#popup {
     width: 70vw;
     background: black;
     color: white;
@@ -21,14 +19,12 @@
     background: purple;
 }
 
-.addAnimation
-{
+.addAnimation {
     animation: comeToPost 2.5s linear;
     animation-fill-mode: forwards;
 }
 
-@keyframes comeToPost
-{
+@keyframes comeToPost {
     0% {
         opacity: 0;
     }
@@ -43,26 +39,21 @@
     }
 }
 
-#heading
-{
+#heading {
     color: white;
     font-family: 'Roboto', sans-serif;
     font-size: 2.2vw;
 }
 
-#indian:hover
-{
+#indian:hover {
     background-color: #8e24aa;
 }
 
-#international:hover
-
-{
+#international:hover {
     background-color: #8e24aa;
 }
 
-.accordion
-{
+.accordion {
     color: white;
     padding: 10px;
     font-size: 20px;
@@ -79,13 +70,11 @@
     transition: 0.4s;
 }
 
-.stock_list
-{
+.stock_list {
     z-index: 1;
 }
 
-.panel
-{
+.panel {
     position: relative;
     top: -3.1vh;
     height: 0px;
@@ -95,8 +84,7 @@
     transition: all 0.5s ease-in;
 }
 
-.buy, .sell
-{
+.buy, .sell {
     margin-bottom: 5px;
     background: black;
     color: white;
@@ -105,8 +93,7 @@
     transform: translateY(2vh);
 }
 
-#buyDiv
-{
+#buyDiv {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -118,8 +105,7 @@
     display: none;
 }
 
-#sellDiv
-{
+#sellDiv {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -131,8 +117,7 @@
     display: none;
 }
 
-#rightNav
-{
+#rightNav {
     width: 10vw;
     height: 100vh;
     background: #ccc;
@@ -143,16 +128,14 @@
     animation-fill-mode: forwards;
 }
 
-.editable
-{
+.editable {
     width: 100%;
     padding: 5px;
     background: green;
     color: white;
 }
 
-.closeBuySellDiv
-{
+.closeBuySellDiv {
     color: white;
     position: relative;
     left: 27vw;
@@ -163,13 +146,12 @@ i.icon-blue {
     color: green;
 }
 
-.nameOfStock, .material-icons
-{
+.nameOfStock, .material-icons {
     display: inline-block;
 }
 
 .upColor {
-    color: rgb(0,180,0);
+    color: rgb(0, 180, 0);
 }
 
 .downColor {
@@ -207,8 +189,7 @@ i.icon-blue {
     color: #9c27b0;
 }
 
-.popup
-{
+.popup {
     width: 70vw;
     height: 10vh;
     background: #eee;
@@ -218,24 +199,17 @@ i.icon-blue {
 }
 
 @media screen and (max-width: 500px) {
-    #buyDiv
-    {
+    #buyDiv {
         width: 60vw;
     }
-
-    #sellDiv
-    {
+    #sellDiv {
         width: 60vw;
     }
-
-    .closeBuySellDiv
-    {
+    .closeBuySellDiv {
         position: relative;
         left: 50vw;
     }
-
-    #heading
-    {
+    #heading {
         font-size: 4vw;
     }
 }
@@ -247,19 +221,14 @@ i.icon-blue {
     #balance {
         font-size: 10px;
     }
-    #buyDiv
-    {
+    #buyDiv {
         width: 60vw;
     }
-
-    .closeBuySellDiv
-    {
+    .closeBuySellDiv {
         position: relative;
         left: 50vw;
     }
-
-    #heading
-    {
+    #heading {
         font-size: 4vw;
     }
 }
