--- a/main/static/css/loader.css
+++ b/main/static/css/loader.css
@@ -1,5 +1,4 @@
-*
-{
+* {
   margin: 0;
   padding: 0;
 }
@@ -13,32 +12,40 @@
   position: absolute;
   top: 50vh;
   left: 48vw;
-  -webkit-animation: spin 2s linear infinite; /* Safari */
+  -webkit-animation: spin 2s linear infinite;
+  /* Safari */
   animation: spin 2s linear infinite;
 }
 
 /* Safari */
+
 @-webkit-keyframes spin {
-  0% { -webkit-transform: rotate(0deg); }
-  100% { -webkit-transform: rotate(360deg); }
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 @media screen and (max-width: 450px) {
-  .loader
-  {
+  .loader {
     position: absolute;
     left: 44vw;
   }
 }
 
 @media screen and (max-width: 450px) {
-  .loader
-  {
+  .loader {
     position: absolute;
     left: 42.5vw;
   }
