--- a/main/templates/main/leaderboard.html
+++ b/main/templates/main/leaderboard.html
@@ -43,7 +43,7 @@
             <hr>
             <a class="links" href='/'>Market</a>
             <hr>
-            <a class="links" href='display_leaderboard'>Leaderboard</a>
+            <a class="links" href='/display_leaderboard'>Leaderboard</a>
             <hr>
             <a class="links" href=''>News </a>
             <hr>
@@ -55,7 +55,7 @@
         <script src="{% static 'js/leaderboard.js' %}"></script>
 
         <script language="javascript" type="text/javascript">
-            $(window).load(function() {
+            $(window).load(function () {
                 $('.loader').hide();
             });
         </script>
