--- a/main/templates/main/user_forgot_password.html
+++ b/main/templates/main/user_forgot_password.html
@@ -13,41 +13,43 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
+
   <body>
-<form method="POST" action="{% url 'user_forgot_password' %}">
-  {% csrf_token %}
-  <div class="row">
-    <div class="col s12 l4 offset-l4">
-      <div class="card">
+    <form method="POST" action="{% url 'user_forgot_password' %}">
+      {% csrf_token %}
+      <div class="row">
+        <div class="col s12 l4 offset-l4">
+          <div class="card">
 
-        <div class="card-action teal lighten-2 white-text">
-          <h3>Forgot Password?</h3>
-        </div>
+            <div class="card-action teal lighten-2 white-text">
+              <h3>Forgot Password?</h3>
+            </div>
 
-        <div class="card-content">
-          <div class="text">
-            <span>
-              {{ message }}
-            </span>
-          </div>
-          <div class="input-field">
-            <i class="material-icons prefix">email</i>
-            <label for="email">E-mail</label>
-            <input type="email" id="email" name="email" />
-          </div>
-          <div class="form-field center-align">
-            <button class="btn-large waves-effect waves-light teal lighten-2" style="width: 70%; font-size: larger">Get
-              new password</button>
+            <div class="card-content">
+              <div class="text">
+                <span>
+                  {{ message }}
+                </span>
+              </div>
+              <div class="input-field">
+                <i class="material-icons prefix">email</i>
+                <label for="email">E-mail</label>
+                <input type="email" id="email" name="email" />
+              </div>
+              <div class="form-field center-align">
+                <button class="btn-large waves-effect waves-light teal lighten-2"
+                  style="width: 70%; font-size: larger">Get
+                  new password</button>
+              </div>
+            </div>
           </div>
         </div>
       </div>
+    </form>
+    <div class="row">
+      <br>
+      <a href={% url 'user_login' %}>
+        <p align="center">Head back to Login
+      </a></p>
     </div>
-  </div>
-</form>
-<div class="row">
-  <br>
-  <a href={% url 'user_login' %}>
-    <p align="center">Head back to Login
-  </a></p>
-</div>
-</body>
+  </body>
