--- a/main/templates/main/game.html
+++ b/main/templates/main/game.html
@@ -81,7 +81,7 @@
 		<div id="buyDiv" class="#00000 black">
 			<a href="javascript:void(0)" class="closeBuySellDiv" onclick="closeBuyDiv()">&times;</a>
 			<p class="flow-text" style="color:white;transform: translateY(-5px)">Buy</p>
-			<input type="number" id="number" name="number" placeholder="Units to Buy" style="color: white">
+			<input type="number" min="0" step="1" id="number" name="number" placeholder="Units to Buy" style="color: white">
 			<input type="submit" class="editable" id="submit_buy">
 		</div>
 
