--- a/main/templates/main/portfolio.html
+++ b/main/templates/main/portfolio.html
@@ -58,11 +58,9 @@
                 </div>
 
                 <div class="stock_list">
-                    <div class="accordion row #e1bee7 purple lighten-4">
+                    <!-- <div class="accordion row #e1bee7 purple lighten-4">
                         <div class="col s4 center-align offset-s2">
                             <span class="valign nameOfStock">Apple</span>
-                            <!-- <i class="small material-icons upColor" style="transform: scale(0.5) translateY(5px);"><b><b>arrow_upward</b></b>
-                            </i> -->
                             <i class="small material-icons downColor"
                                 style="transform: scale(0.5) translateY(5px);"><b><b>arrow_downward</b></b>
                             </i>
@@ -72,7 +70,7 @@
                     <div class="panel row #e1bee7 purple lighten-4">
                         <button class="buy col s2 offset-s3" onclick="openBuyDiv()" style="padding: 7px">BUY</button>
                         <button class="sell col s2 offset-s2" onclick="openSellDiv()" style="padding: 7px">SELL</button>
-                    </div>
+                    </div> -->
 
 
                 </div>
