templates adjusted to match allauth

--- a/main/templates/allauth/accounts/password_reset.html
+++ b/main/templates/allauth/accounts/password_reset.html
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <form method="POST" action="{% url 'user_forgot_password' %}">
+    <form method="POST" action="{% url 'account_reset_password' %}">
       {% csrf_token %}
       <div class="row">
         <div class="col s12 l4 offset-l4">
@@ -35,6 +35,7 @@
                 <i class="material-icons prefix">email</i>
                 <label for="email">E-mail</label>
                 <input type="email" id="email" name="email" />
+                {{form.email.errors}}
               </div>
               <div class="form-field center-align">
                 <button class="btn-large waves-effect waves-light teal lighten-2"
@@ -48,7 +49,7 @@
     </form>
     <div class="row">
       <br>
-      <a href={% url 'user_login' %}>
+      <a href="{{ login_url }}">
         <p align="center">Head back to Login
       </a></p>
     </div>
