--- a/main/templates/allauth/accounts/signup.html
+++ b/main/templates/allauth/accounts/signup.html
@@ -1,6 +1,6 @@
 <html>
   {% load staticfiles %}
-
+  {% load i18n %}
   <head>
     <meta charset="utf-8" name="viewport" content=" width = device-width, initial-scale = 1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <form method="POST" action="{% url 'register' %}">
+    <form method="POST" id="signup_form" action="{% url 'account_signup' %}">
       {% csrf_token %}
       <div class="row">
         <div class="col s12 l4 offset-l4">
@@ -28,30 +28,39 @@
               <div class="input-field">
                 <i class="material-icons prefix">email</i>
                 <label for="email">E-mail</label>
-                <input type="email" id="email" name="email" />
+                <input type="email" name="email" placeholder="E-mail address" required id="id_email">
+                {{form.email.errors}}              
               </div>
 
               <div class="input-field">
                 <i class="material-icons prefix">person</i>
                 <label for="name">Name</label>
-                <input type="text" id="name" name="name" required />
+                <input type="text" id="first_name" name="first_name" placeholder="Name" required id="id_first_name" />
+                {{form.name.errors}}
               </div>
 
               <div class="input-field">
                 <i class="material-icons prefix">account_circle</i>
                 <label for="username">Username</label>
-                <input type="text" id="username" name="username" required />
+                <input type="text" name="username" placeholder="Username" autofocus="autofocus" minlength="1" maxlength="150" required
+                  id="id_username">
+                {{form.username.errors}}
               </div>
 
               <div class="input-field">
                 <i class="material-icons prefix">lock</i>
                 <label for="password">Password</label>
-                <input type="password" id="password" name="password" required />
+                <input type="password" name="password1" placeholder="Password" required id="id_password1">
+                {{form.password1.errors}}
               </div>
+              
+              {% if redirect_field_value %}
+              <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+              {% endif %}
 
               <div class="form-field center-align">
                 <button class="btn-large waves-effect waves-light teal lighten-2"
-                  style="width: 70%; font-size: large">Register</button>
+                 style="width: 70%; font-size: large">{% trans "Register" %} &raquo;</button>
               </div>
 
             </div>
