--- a/main/templates/main/portfolio.html
+++ b/main/templates/main/portfolio.html
@@ -2,10 +2,9 @@
     {% load static %}
 
     <head>
-
+        <title>SMS 2019</title>
         <meta charset="utf-8" name="viewport" content=" width = device-width, initial-scale = 1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>{% block title %}{% endblock %}- SMS 2019</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link rel="stylesheet" type="text/css" href="{% static 'css/template.css' %}">
@@ -37,22 +36,23 @@
 
         <div class="container-fluid">
             <div class="#000000 black row" style="padding: 20px">
-                <div class="col s3" onclick="openNav()" style="color: white;cursor:pointer;">&#9776;</div>
-                <div class="col s6 center-align" id="heading">PORTFOLIO</div>
-                <div class="col s3 center-align" id="balance" style="color: white;font-family: 'Lato', sans-serif;">
-                </div><br><br>
+                <div class="col s1 white-text" onclick="openNav()" style="cursor:pointer;">&#9776;</div>
+                <div class="col s3 white-text" style="cursor:pointer;">{{request.user.username}}</div>
+                <div class="col s5 flow-text" id="heading">PORTFOLIO</div>
+                <div class="col s3 center-align flow-text" id="balance"></div><br><br>
+
                 <a href="#" id="indian" class="col s4 center-align" style="padding: 5px;border-radius:10px;">
-                    <div class="#8e24aa purple darken-1" id="indian1"
-                        style="color:white;font-family: 'Raleway', sans-serif;border-radius: 10px;">BSE</div>
+                    <div class="#8e24aa purple darken-1 white-text" id="indian1"
+                        style="border-radius: 10px;">BSE</div>
                 </a>
                 <a href="#" id="indian" class="col s4 center-align" style="padding: 5px;border-radius:10px;">
-                    <div class="#8e24aa purple darken-1" id="indian1"
-                        style="color:white;font-family: 'Raleway', sans-serif;border-radius: 10px;">NYM</div>
+                    <div class="#8e24aa purple darken-1 white-text" id="indian2"
+                        style="border-radius: 10px;">NYM</div>
                 </a>
-                <a href="#" id="international" class="col s4 center-align"
-                    style="color: white;padding: 5px;border-radius:10px;">
-                    <div class="#8e24aa purple darken-1" id="international1"
-                        style="font-family: 'Raleway', sans-serif;border-radius: 10px;">JPN</div>
+                <a href="#" id="international" class="col s4 center-align white-text"
+                    style="padding: 5px;border-radius:10px;">
+                    <div class="#8e24aa purple darken-1 white-text" id="international1"
+                        style="border-radius: 10px;">JPN</div>
                 </a>
             </div>
 
@@ -66,11 +66,29 @@
                         UNITS OWNED</div>
                 </div>
 
-                <div class="stock_list">
+                <div class="stock_list"></div>
+            </div>
+        </div>
+
+        <footer class="page-footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col l6 s12">
+                        <h5 class="white-text">Footer Content</h5>
+                        <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+                    </div>
+                    <div class="col l4 offset-l2 s12">
+                        <h5 class="white-text">Links</h5>
+                        <ul>
+                            <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+                            <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+                            <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+                            <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-
-        </div>
+        </footer>
 
         <div id="buyDiv" class="#00000 black">
             <a href="javascript:void(0)" class="closeBuySellDiv" onclick="closeBuyDiv()">&times;</a>
