--- a/main/templates/main/leaderboard.html
+++ b/main/templates/main/leaderboard.html
@@ -3,7 +3,7 @@
     {% load static %}
 
     <head>
-
+        <title>SMS 2019</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
         <link rel="stylesheet" type="text/css" href="{% static 'css/loader.css' %}">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -12,16 +12,24 @@
         <meta charset="utf-8" name="viewport" content=" width = device-width, initial-scale = 1.0">
         <link rel="stylesheet" href="{% static 'css/leaderboard.css' %}">
 
+        <script type="text/javascript">
+            function hideLoader() {
+                $('.loader').hide();
+            }
+        </script>
+
     </head>
 
-    <body>
+    <body onload="hideLoader()">
 
         <div class="loader"></div>
 
         <div class="container-fluid">
             <div class="row valign-wrapper black" id="topHeader">
-                <div class="col s5" onclick="openNav()" style="color: white;cursor:pointer;">&#9776;</div>
-                <div class="col s7 white-text flow-text" id="heading">LEADERBOARD</div>
+                <div class="col s1" onclick="openNav()" style="color: white;cursor:pointer;">&#9776;</div>
+                <div class="col s3" style="color: white;cursor:pointer;">username</div>
+                <div class="col s5 white-text flow-text" id="heading">LEADERBOARD</div>
+                <div class="col s3 white-text flow-text" id="balance">balance</div>
             </div>
         </div>
         <div class="container">
