Minor fix - Button id for markets

--- a/main/templates/main/game.html
+++ b/main/templates/main/game.html
@@ -44,15 +44,15 @@
 				<div class="col s3 center-align flow-text white-text" id="balance"></div><br><br>
 				<a href="#" id="indian" class="col s4 center-align" style="padding: 5px;border-radius:10px;">
 					<div class="#8e24aa purple darken-1 white-text" id="indian1"
-						style="border-radius: 10px;">BSC</div>
+						style="border-radius: 10px;">BSE</div>
 				</a>
-				<a href="#" id="indian" class="col s4 center-align" style="padding: 5px;border-radius:10px;">
-					<div class="#8e24aa purple darken-1 white-text" id="indian2"
+				<a href="#" id="international" class="col s4 center-align" style="padding: 5px;border-radius:10px;">
+					<div class="#8e24aa purple darken-1 white-text" id="international1"
 						style="border-radius: 10px;">NYM</div>
 				</a>
-				<a href="#" id="international" class="col s4 center-align"
+				<a href="#" id="japanese" class="col s4 center-align"
 					style="color: white;padding: 5px;border-radius:10px;">
-					<div class="#8e24aa purple darken-1 white-text" id="international1"
+					<div class="#8e24aa purple darken-1 white-text" id="international2"
 						style="border-radius: 10px;">JAP</div>
 				</a>
 			</div>
