--- a/main/templates/main/portfolio.html
+++ b/main/templates/main/portfolio.html
@@ -45,13 +45,13 @@
                     <div class="#8e24aa purple darken-1 white-text" id="indian1"
                         style="border-radius: 10px;">BSE</div>
                 </a>
-                <a href="#" id="indian" class="col s4 center-align" style="padding: 5px;border-radius:10px;">
-                    <div class="#8e24aa purple darken-1 white-text" id="indian2"
+                <a href="#" id="international" class="col s4 center-align" style="padding: 5px;border-radius:10px;">
+                    <div class="#8e24aa purple darken-1 white-text" id="international1"
                         style="border-radius: 10px;">NYM</div>
                 </a>
-                <a href="#" id="international" class="col s4 center-align white-text"
+                <a href="#" id="japanese" class="col s4 center-align white-text"
                     style="padding: 5px;border-radius:10px;">
-                    <div class="#8e24aa purple darken-1 white-text" id="international1"
+                    <div class="#8e24aa purple darken-1 white-text" id="international2"
                         style="border-radius: 10px;">JPN</div>
                 </a>
             </div>
@@ -70,7 +70,7 @@
             </div>
         </div>
 
-        <footer class="page-footer">
+        <!-- <footer class="page-footer">
             <div class="container">
                 <div class="row">
                     <div class="col l6 s12">
@@ -88,7 +88,7 @@
                     </div>
                 </div>
             </div>
-        </footer>
+        </footer> -->
 
         <div id="buyDiv" class="#00000 black">
             <a href="javascript:void(0)" class="closeBuySellDiv" onclick="closeBuyDiv()">&times;</a>
