Market Username Fix

--- a/main/templates/main/game.html
+++ b/main/templates/main/game.html
@@ -39,21 +39,20 @@
 		<div class="container-fluid">
 			<div class="#000000 black row" style="padding: 20px">
 				<div class="col s1" onclick="openNav()" style="color: white;cursor:pointer;">&#9776;</div>
-				<div class="col s3" style="color: white;cursor:pointer;">username</div>
+				<div class="col s3" style="color: white;cursor:pointer;">{{request.user.username}}</div>
 				<div class="col s5" id="heading">&ensp;&ensp;MARKET</div>
 				<div class="col s3 center-align flow-text white-text" id="balance"></div><br><br>
 				<a href="#" id="indian" class="col s4 center-align" style="padding: 5px;border-radius:10px;">
-					<div class="#8e24aa purple darken-1 white-text" id="indian1"
-						style="border-radius: 10px;">BSE</div>
+					<div class="#8e24aa purple darken-1 white-text" id="indian1" style="border-radius: 10px;">BSE</div>
 				</a>
 				<a href="#" id="international" class="col s4 center-align" style="padding: 5px;border-radius:10px;">
-					<div class="#8e24aa purple darken-1 white-text" id="international1"
-						style="border-radius: 10px;">NYM</div>
+					<div class="#8e24aa purple darken-1 white-text" id="international1" style="border-radius: 10px;">NYM
+					</div>
 				</a>
 				<a href="#" id="japanese" class="col s4 center-align"
 					style="color: white;padding: 5px;border-radius:10px;">
-					<div class="#8e24aa purple darken-1 white-text" id="international2"
-						style="border-radius: 10px;">JAP</div>
+					<div class="#8e24aa purple darken-1 white-text" id="international2" style="border-radius: 10px;">JAP
+					</div>
 				</a>
 			</div>
 
