--- a/main/templates/main/game.html
+++ b/main/templates/main/game.html
@@ -51,7 +51,7 @@
 				</a>
 				<a href="#" id="japanese" class="col s4 center-align"
 					style="color: white;padding: 5px;border-radius:10px;">
-					<div class="#8e24aa purple darken-1 white-text" id="international2" style="border-radius: 10px;">JAP
+					<div class="#8e24aa purple darken-1 white-text" id="international2" style="border-radius: 10px;">JPN
 					</div>
 				</a>
 			</div>
@@ -60,8 +60,11 @@
 				<div class="row #ab47bc purple lighten-1 hoverable z-depth-2">
 					<div class="col s4 center-align offset-s2 flow-text white-text"
 						style="font-family: 'Raleway', sans-serif;">STOCK NAME</div>
-					<div class="col s4 center-align flow-text white-text" style="font-family: 'Raleway', sans-serif;">
+					<div class="col s2 center-align flow-text white-text" style="font-family: 'Raleway', sans-serif;">
 						STOCK PRICE
+					</div>
+					<div class="col s2 center-align flow-text white-text" style="font-family: 'Raleway', sans-serif;">
+						AVAILABLE UNITS
 					</div>
 				</div>
 
