Add available units on market page

--- a/main/templates/main/game.html
+++ b/main/templates/main/game.html
@@ -58,12 +58,12 @@
 
 			<div class="container">
 				<div class="row #ab47bc purple lighten-1 hoverable z-depth-2">
-					<div class="col s4 center-align offset-s2 flow-text white-text"
+					<div class="col s4 center-align flow-text white-text"
 						style="font-family: 'Raleway', sans-serif;">STOCK NAME</div>
-					<div class="col s2 center-align flow-text white-text" style="font-family: 'Raleway', sans-serif;">
+					<div class="col s4 center-align flow-text white-text" style="font-family: 'Raleway', sans-serif;">
 						STOCK PRICE
 					</div>
-					<div class="col s2 center-align flow-text white-text" style="font-family: 'Raleway', sans-serif;">
+					<div class="col s4 center-align flow-text white-text" style="font-family: 'Raleway', sans-serif;">
 						AVAILABLE UNITS
 					</div>
 				</div>
