--- a/main/templates/main/portfolio.html
+++ b/main/templates/main/portfolio.html
@@ -42,17 +42,16 @@
                 <div class="col s3 center-align flow-text" id="balance"></div><br><br>
 
                 <a href="#" id="indian" class="col s4 center-align" style="padding: 5px;border-radius:10px;">
-                    <div class="#8e24aa purple darken-1 white-text" id="indian1"
-                        style="border-radius: 10px;">BSE</div>
+                    <div class="#8e24aa purple darken-1 white-text" id="indian1" style="border-radius: 10px;">BSE</div>
                 </a>
                 <a href="#" id="international" class="col s4 center-align" style="padding: 5px;border-radius:10px;">
-                    <div class="#8e24aa purple darken-1 white-text" id="international1"
-                        style="border-radius: 10px;">NYM</div>
+                    <div class="#8e24aa purple darken-1 white-text" id="international1" style="border-radius: 10px;">NYM
+                    </div>
                 </a>
                 <a href="#" id="japanese" class="col s4 center-align white-text"
                     style="padding: 5px;border-radius:10px;">
-                    <div class="#8e24aa purple darken-1 white-text" id="international2"
-                        style="border-radius: 10px;">JPN</div>
+                    <div class="#8e24aa purple darken-1 white-text" id="international2" style="border-radius: 10px;">JPN
+                    </div>
                 </a>
             </div>
 
@@ -70,25 +69,27 @@
             </div>
         </div>
 
-        <!-- <footer class="page-footer">
+        <footer id="footer" class="page-footer #ce93d8 purple lighten-3">
             <div class="container">
                 <div class="row">
-                    <div class="col l6 s12">
-                        <h5 class="white-text">Footer Content</h5>
-                        <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+                    <div class="col s12" style="border: 2px solid black">
+                        Transaction 1
                     </div>
-                    <div class="col l4 offset-l2 s12">
-                        <h5 class="white-text">Links</h5>
-                        <ul>
-                            <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                            <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                            <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                            <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-                        </ul>
+                    <div class="col s12">
+                        Transaction 2
+                    </div>
+                    <div class="col s12">
+                        Transaction 3
+                    </div>
+                    <div class="col s12">
+                        Transaction 4
+                    </div>
+                    <div class="col s12">
+                        Transaction 5
                     </div>
                 </div>
             </div>
-        </footer> -->
+        </footer>
 
         <div id="buyDiv" class="#00000 black">
             <a href="javascript:void(0)" class="closeBuySellDiv" onclick="closeBuyDiv()">&times;</a>
