--- a/main/static/css/game.css
+++ b/main/static/css/game.css
@@ -212,6 +212,12 @@ i.icon-blue {
     bottom: 10vh;
 }
 
+#footer {
+    position: absolute;
+    bottom: 0;
+    width: 100vw;
+}
+
 @media screen and (max-width: 500px) {
     #buyDiv {
         width: 60vw;
