Hiding Transactions in Portfolio

--- a/main/templates/main/portfolio.html
+++ b/main/templates/main/portfolio.html
@@ -69,7 +69,7 @@
             </div>
         </div>
 
-        <footer id="footer" class="page-footer #ce93d8 purple lighten-3">
+        <!-- <footer id="footer" class="page-footer #ce93d8 purple lighten-3">
             <div class="container">
                 <div class="row">
                     <div class="col s12" style="border: 2px solid black">
@@ -89,7 +89,7 @@
                     </div>
                 </div>
             </div>
-        </footer>
+        </footer> -->
 
         <div id="buyDiv" class="#00000 black">
             <a href="javascript:void(0)" class="closeBuySellDiv" onclick="closeBuyDiv()">&times;</a>
