--- a/main/templates/main/game.html
+++ b/main/templates/main/game.html
@@ -93,7 +93,7 @@
 			<hr>
 			<a class="links" href='/display_leaderboard'>Leaderboard</a>
 			<hr>
-			<a class="links" href=''>News </a>
+			<a class="links" href='/news'>News </a>
 			<hr>
 			<a class="links" href='/accounts/logout/'>Logout</a>
 			<hr>
