--- a/main/templates/main/leaderboard.html
+++ b/main/templates/main/leaderboard.html
@@ -53,7 +53,7 @@
             <hr>
             <a class="links" href='/display_leaderboard'>Leaderboard</a>
             <hr>
-            <a class="links" href=''>News </a>
+            <a class="links" href='/news'>News </a>
             <hr>
             <a class="links" href='/accounts/logout/'>Logout</a>
             <hr>
