--- a/main/templates/main/news.html
+++ b/main/templates/main/news.html
@@ -1,16 +1,73 @@
 <html>
     {%load static%}
 
-    <head>
+<head>
         <title>News</title>
-    </head>
+		<meta charset="utf-8" name="viewport" content=" width = device-width, initial-scale = 1.0">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>{% block title %}{% endblock %}- SMS 2019</title>
+        <link rel="stylesheet" type="text/css" href="{% static 'css/game.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/template.css' %}">
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Roboto:900" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        
+        <style>
+            h5
+            {
+                overflow-y: hidden;
+            }
+        </style>
+</head>
 
-    <body>
-        <p>Hello lol</p>
+<body>
 
-        <script src="https://code.jquery.com/jquery-3.3.1.js"
-            integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-        <script src="{% static 'js/news.js' %}"></script>
-    </body>
+        <div class="container-fluid">
+                <div class="row valign-wrapper black" id="topHeader" style="padding: 10px;">
+                    <div class="col s1 center-align" onclick="openNav()" style="color: white;cursor:pointer;">&#9776;</div>
+                    <div class="col s10 center-align white-text flow-text" id="heading">NEWS</div>
+                    <div class="col s1 white-text flow-text" id="heading"></div>
+                </div>
+            </div>
+
+    <div class="row">
+        <div id="card_holder" class="col s12 l8 offset-l2">
+            <!-- <div class="card">
+                <div class="card-action">
+                    Card Title
+                </div>
+                <div class="card-content">
+                    <p>I am a very simple card. I am good at containing small bits of information.
+                    I am convenient because I require little markup to use effectively.</p>
+                </div>
+                <div class="card-action">
+                    <a href="#">This is a link</a>
+                </div>
+            </div> -->
+        </div>
+    </div>
+
+    <div id="mySidenav" class="sidenavbar">
+			<a class="links" href="#" style="font-size: 40px;">SMS</a>
+			<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+			<a class="links" href='/portfolio/'>Portfolio</a>
+			<hr>
+			<a class="links" href='/'>Market</a>
+			<hr>
+			<a class="links" href='/display_leaderboard'>Leaderboard</a>
+			<hr>
+			<a class="links" href='/news'>News </a>
+			<hr>
+			<a class="links" href='/accounts/logout/'>Logout</a>
+			<hr>
+		</div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.js"
+        integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+    <script src="{% static 'js/news.js' %}"></script>
+</body>
 
 </html>
